--- a/WolvenKit/MVVM/Views/Shell/Editor/PropertiesView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/PropertiesView.xaml
@@ -3,6 +3,7 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
+ xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
@@ -21,30 +22,350 @@
                 <hc:ThemeResources RequestedTheme="Dark" />
                 <hc:Theme />
             </ResourceDictionary.MergedDictionaries>
-            <ControlTemplate x:Key="as" TargetType="TreeViewItem">
-                <StackPanel>
-                    <Expander Header="{Binding BTitle}">
-                        <ListBox ItemsSource="{Binding BTitle}" />
-                    </Expander>
-                </StackPanel>
-            </ControlTemplate>
+            <c:ValueConverterGroup x:Key="DateTimeVisi">
+                <hc:Object2StringConverter />
+                <hc:String2VisibilityConverter />
+            </c:ValueConverterGroup>
+
         </ResourceDictionary>
 
 
     </catel:UserControl.Resources>
+    <hc:ScrollViewer x:Name="fish">
 
-    <Grid>
+        <Grid>
+
+            <StackPanel>
 
 
 
-        <TreeViewItem Header="{Binding BTitle}" Template="{StaticResource as}" />
 
 
-        <TextBlock
-         HorizontalAlignment="Center"
-         VerticalAlignment="Top"
-         Text="{Binding BTitle}"
-         />
 
-    </Grid>
+                <Border
+                 Margin="3,3,3,3"
+                 HorizontalAlignment="Stretch"
+                 Background="Transparent"
+                 BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                 BorderThickness="2,1,2,0"
+                 Style="{StaticResource BorderTipPrimary}"
+                 >
+                    <StackPanel>
+                        <TextBlock
+                         Margin="0"
+                         HorizontalAlignment="Center"
+                         FontWeight="Bold"
+                         Text="{Binding Name}"
+                         TextAlignment="Center"
+                         TextWrapping="Wrap"
+                         />
+                        <TextBlock
+                         HorizontalAlignment="Center"
+                         Text="{Binding FullName}"
+                         TextAlignment="Center"
+                         TextWrapping="Wrap"
+                         />
+
+                    </StackPanel>
+                </Border>
+
+                <Expander
+                 x:Name="ExplorerBind"
+                 Header="File Info"
+                 IsExpanded="True"
+                 >
+                    <StackPanel>
+
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.Name, Converter={StaticResource String2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="File Name" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding FileSystemInfo.Name}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.Extension, Converter={StaticResource String2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Extension" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding FileSystemInfo.Extension}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+
+
+                            </Border>
+
+
+
+                        </Grid>
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.CreationTime, Converter={StaticResource Object2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="Created at" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding FileSystemInfo.CreationTime}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.LastWriteTime, Converter={StaticResource Object2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="Last Modified" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding FileSystemInfo.LastWriteTime}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.LastAccessTime, Converter={StaticResource Object2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="Last Accessed" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding FileSystemInfo.LastAccessTime}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+
+
+                    </StackPanel>
+
+
+                </Expander>
+                <Expander
+                 x:Name="AssetsBind"
+                 Header="File Info"
+                 IsExpanded="True"
+                 >
+                    <StackPanel>
+
+
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="File Name" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding SelectedNode.Name}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="File Size" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding SelectedNode.Size}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             Visibility="{Binding FileSystemInfo.Extension, Converter={StaticResource String2VisibilityConverter}}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Extension" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding SelectedNode.Extension}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+
+
+                            </Border>
+
+
+
+                        </Grid>
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="Type" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding SelectedNode.Type}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+                        <Grid>
+
+                            <Border
+                             Margin="3,3,3,3"
+                             HorizontalAlignment="Stretch"
+                             Background="Transparent"
+                             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+                             BorderThickness="2,0,2,0"
+                             Style="{StaticResource BorderTipPrimary}"
+                             >
+                                <StackPanel Orientation="Horizontal">
+
+                                    <TextBlock Text="Parent Folder" />
+                                    <hc:Shield
+                                     Margin="10,0,0,0"
+                                     Status="{Binding SelectedNode.Parent.Name}"
+                                     Subject=":"
+                                     Color="{DynamicResource MahApps.Brushes.Accent3}"
+                                     />
+
+
+                                </StackPanel>
+                            </Border>
+
+
+
+                        </Grid>
+                    </StackPanel>
+                </Expander>
+
+
+            </StackPanel>
+
+
+
+
+
+        </Grid>
+    </hc:ScrollViewer>
+
 </catel:UserControl>
