--- a/WolvenKit/MVVM/Views/PropertyGridEditors/ListEditorView.xaml
+++ b/WolvenKit/MVVM/Views/PropertyGridEditors/ListEditorView.xaml
@@ -60,42 +60,42 @@
 
     <Grid Background="Transparent">
         <!-- Main Layout -->
-        <TreeView>
-            <TreeViewItem>
+        <hc:ScrollViewer>
+            <TreeView>
+                <TreeViewItem>
 
-                <!--Header -->
-                <TreeViewItem.Header>
-                    <Grid >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                    <!--Header -->
+                    <TreeViewItem.Header>
+                        <Grid >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
-                        <!-- Add Item Box -->
-                        <hc:ComboBox Grid.Column="0" 
-                                     ToolTip="Press ENTER to add an item." 
-                                     IsEditable="True" 
-                                     Width="Auto" 
-                                     ShowClearButton="True" 
-                                     Margin="0,5,10,5" 
-                                     MaxHeight="50" />
+                            <!-- Add Item Box -->
+                            <hc:ComboBox Grid.Column="0" 
+                                         ToolTip="Press ENTER to add an item." 
+                                         IsEditable="True" 
+                                         Width="Auto" 
+                                         ShowClearButton="True" 
+                                         Margin="0,5,10,5" 
+                                         MaxHeight="50" />
 
-                        <!-- Open Special Editor Button -->
-                        <Button Grid.Column="1" 
-                                Margin="0,5,5,5" 
-                                HorizontalAlignment="Right" 
-                                hc:IconElement.Geometry="{DynamicResource DragHorizontalGeometry}"/>
+                            <!-- Open Special Editor Button -->
+                            <Button Grid.Column="1" 
+                                    Margin="0,5,5,5" 
+                                    HorizontalAlignment="Right" 
+                                    hc:IconElement.Geometry="{DynamicResource DragHorizontalGeometry}"/>
 
-                    </Grid>
-                </TreeViewItem.Header>
+                        </Grid>
+                    </TreeViewItem.Header>
 
-                <!-- Control Body -->
-                <ContentControl Name="ContentControl"/>
+                    <!-- Control Body -->
+                    <ContentControl Name="ContentControl"/>
 
-            </TreeViewItem>
-        </TreeView>
-
-        
+                </TreeViewItem>
+            </TreeView>
+        </hc:ScrollViewer>
     </Grid>
 
 </UserControl>
