--- a/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
@@ -133,7 +132,9 @@
         <Grid Grid.Column="2">
             <hc:PropertyGrid
                 PropertyResolver="{Binding PropertyResolver }"
-                SelectedObject="{Binding SelectedChunk.Data}">
+                SelectedObject="{Binding SelectedChunk.Data}"
+                
+                >
             </hc:PropertyGrid>
         </Grid>
     </Grid>
