--- a/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
@@ -11,9 +11,9 @@
     xmlns:cmodel="clr-namespace:WolvenKit.MVVM.ViewModels.Shell.Editor"
     xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
     xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
-    xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:propertyGridEditors="clr-namespace:WolvenKit.MVVM.Views.PropertyGridEditors"
+    xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
@@ -28,7 +28,7 @@
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
         <Grid.Resources>
-            <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="308" />
