--- a/WolvenKit/MVVM/Views/Shell/Editor/ImportView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/ImportView.xaml
@@ -12,7 +12,8 @@
  xmlns:local="clr-namespace:WolvenKit"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.MVVM.Model"
- xmlns:viewModels="clr-namespace:WolvenKit"
+ xmlns:viewModels="clr-namespace:WolvenKit" 
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
  d:DesignHeight="450"
  d:DesignWidth="800"
  IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -26,9 +27,9 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </catel:UserControl.Resources>
-    <Grid xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters">
+    <Grid>
         <Grid.Resources>
-            <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
 
         <TreeView
