--- a/WolvenKit/MVVM/Views/Shell/Editor/PropertiesView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/PropertiesView.xaml
@@ -8,7 +8,8 @@
  xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:model="clr-namespace:WolvenKit.MVVM.Model"
+ xmlns:model="clr-namespace:WolvenKit.MVVM.Model" 
+ xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters"
  d:DesignHeight="450"
  d:DesignWidth="800"
  IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -24,9 +25,9 @@
         </ResourceDictionary>
     </catel:UserControl.Resources>
 
-    <Grid xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters">
+    <Grid>
         <Grid.Resources>
-            <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
 
         <TreeView
